--- a/src/Apex/ApexScoreCardBundle/Resources/config/routing.yml
+++ b/src/Apex/ApexScoreCardBundle/Resources/config/routing.yml
@@ -1,6 +1,6 @@
-apex_score_homepage:
-    pattern:  /hello/{name}
-    defaults: { _controller: ApexScoreBundle:Default:index }
+#apex_score_homepage:
+#    pattern:  /
+#    defaults: { _controller: ApexScoreBundle:Default:login }
 
 
 ApexScoreBundle_course:
@@ -35,3 +35,35 @@ GlobalJs:
 #apex_score_app: 
 #    pattern: /App
 #    defaults: { _controller: ApexScoreBundle:App:index }
+
+#login:
+#    pattern: /login
+#    defaults: { _controller: ApexScoreBundle:Default:login }
+
+#login_check:
+#    pattern: /login_check
+    
+#admin:
+#    pattern: /admin/poo
+#    defaults: { _controller: "ApexScoreBundle:app:index" }
+
+fos_user_security:
+    resource: "@FOSUserBundle/Resources/config/routing/security.xml"
+
+fos_user_profile:
+    resource: "@FOSUserBundle/Resources/config/routing/profile.xml"
+    prefix: /profile
+
+fos_user_register:
+    resource: "@FOSUserBundle/Resources/config/routing/registration.xml"
+    prefix: /register
+
+fos_user_resetting:
+    resource: "@FOSUserBundle/Resources/config/routing/resetting.xml"
+    prefix: /resetting
+
+fos_user_change_password:
+    resource: "@FOSUserBundle/Resources/config/routing/change_password.xml"
+    prefix: /profile
+    
+    
