--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "jms/security-extra-bundle": "1.4.*",
         "jms/di-extra-bundle": "1.3.*",
         "leafo/lessphp": "*",
-        "stof/doctrine-extensions-bundle": "dev-master"
+        "stof/doctrine-extensions-bundle": "dev-master",
+	"friendsofsymfony/user-bundle": "*"
     },
     "scripts": {
         "post-install-cmd": [
