--- a/src/Apex/ApexScoreCardBundle/Resources/config/routing/course.yml
+++ b/src/Apex/ApexScoreCardBundle/Resources/config/routing/course.yml
@@ -28,3 +28,8 @@ course_delete:
     pattern:  /{id}/delete
     defaults: { _controller: "ApexScoreBundle:Course:delete" }
     requirements: { _method: post }
+
+course_json_get:
+    pattern: /json/show/course
+    defaults: { _controller: "ApexScoreBundle:Course:getCourseList" }
+    requirements: { _method: post }
