--- a/src/Apex/ApexScoreCardBundle/Resources/config/routing/course.yml
+++ b/src/Apex/ApexScoreCardBundle/Resources/config/routing/course.yml
@@ -33,3 +33,8 @@ course_json_get:
     pattern: /json/show/course
     defaults: { _controller: "ApexScoreBundle:Course:getCourseList" }
     requirements: { _method: post }
+    
+course_json_get_data:
+    pattern: json/get/course/data
+    defaults: { _controller: "ApexScoreBundle:Course:getCourseData" }
+    requirements: { _method: post }
