--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -18,6 +18,10 @@ security:
                 provider: fos_userbundle
                 csrf_provider: form.csrf_provider
                 login_path: /login
+                always_use_default_target_path: true
+                default_target_path: /profile
+                
+                
             logout:       true
             anonymous:    true
             
