--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "jms/di-extra-bundle": "1.3.*",
         "leafo/lessphp": "*",
         "stof/doctrine-extensions-bundle": "dev-master",
-	"friendsofsymfony/user-bundle": "*"
+	"friendsofsymfony/user-bundle": "*",
+        "ext-apc": ">1.0"
     },
     "scripts": {
         "post-install-cmd": [
