--- a/src/Apex/ApexScoreCardBundle/Resources/config/routing/golfer.yml
+++ b/src/Apex/ApexScoreCardBundle/Resources/config/routing/golfer.yml
@@ -32,7 +32,7 @@ golfer_delete:
 golfer_json_get:
     pattern: /json/show/golfer
     defaults: { _controller: "ApexScoreBundle:Golfer:jsonGolfer", _format: json }
-    requirements: { _method: post }
+    requirements: { _method: post|get }
 
 golfer_json_set:
     pattern: /json/save/golfer
