--- a/src/Apex/ApexScoreCardBundle/Resources/config/routing/roundScore.yml
+++ b/src/Apex/ApexScoreCardBundle/Resources/config/routing/roundScore.yml
@@ -32,7 +32,7 @@ roundscore_delete:
 roundScore_json_new:
     pattern: /json/new/roundScore
     defaults: { _controller: "ApexScoreBundle:roundScore:createNewRoundScore", _format: json }
-    requirements: { _method: post }
+    requirements: { _method: post|get }
     
 roundScore_json_get_scores:
     pattern: /json/get/roundScores
