Kierrosten poisto korjattu - toimi vahingossa oikein välillä

--- a/src/Apex/ApexScoreCardBundle/Resources/config/routing/round.yml
+++ b/src/Apex/ApexScoreCardBundle/Resources/config/routing/round.yml
@@ -52,4 +52,4 @@ round_json_end:
 round_json_delete:
     pattern: /json/delete/round
     defaults: { _controller: "ApexScoreBundle:Round:deleteRound", _format: json }
-    requirements: { _method: post }
+    requirements: { _method: post|get }
