Tarkistetaan myös hiljattain pelattuja kierroksia ladatessa että kierroksia yläpäätään on pelattu.

--- a/src/Apex/ApexScoreCardBundle/Resources/config/routing/round.yml
+++ b/src/Apex/ApexScoreCardBundle/Resources/config/routing/round.yml
@@ -57,4 +57,4 @@ round_json_delete:
 round_json_get_recent_courses:
     pattern: /json/get/course/recent
     defaults: { _controller: "ApexScoreBundle:Round:getRecentCourses", _format: json }
-    requirements: { _method: post }
+    requirements: { _method: post|get }
