--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -37,9 +37,11 @@ twig:
 assetic:
     debug:          %kernel.debug%
     use_controller: false
-    bundles:        [ ]
+    bundles:        [ApexScoreBundle]
     #java: /usr/bin/java
     filters:
+        yui_js:
+            jar: "%kernel.root_dir%/Resources/java/yuicompressor-2.4.7.jar"
         cssrewrite: ~
         #closure:
         #    jar: %kernel.root_dir%/Resources/java/compiler.jar
