Remember Me päälle kaikille

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -22,17 +22,17 @@ security:
                 default_target_path: /profile
             remember_me:
                 key: seeekret
-                lifetime: 96000000
-#                always_remember_me: true
+                lifetime: 9600000000
+                always_remember_me: true
                 path: /
                 domain: magrathea.kortex.jyu.fi
-                
+
 
             anonymous:    true
-            
+
     access_control:
         - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/admin/, role: ROLE_ADMIN }
-        - { path: ^/.*, role: IS_AUTHENTICATED_ANONYMOUSLY }      
+        - { path: ^/.*, role: IS_AUTHENTICATED_ANONYMOUSLY }
